packages/installer/manifests/apps/account-lookup-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: account-lookup-svc
    mojaloop.layer: apps
  name: account-lookup-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: account-lookup-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: account-lookup-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: AUTH_N_TOKEN_AUDIENCE
          value: mojaloop.vnext.dev.default_audience
        - name: AUTH_N_TOKEN_ISSUER_NAME
          value: mojaloop.vnext.dev.default_issuer
        - name: AUTH_Z_SVC_BASEURL
          value: http://authorization-svc:3202
        - name: KAFKA_AUDITS_TOPIC
          value: audits
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: kafka:9092
        - name: MONGO_URL
          value: mongodb://root:mongoDbPas42@mongodb:27017/
        - name: PARTICIPANTS_SVC_URL
          value: http://participants-svc:3010
        - name: PLATFORM_CONFIG_BASE_SVC_URL
          value: http://platform-configuration-svc:3100
        image: mojaloop/account-lookup-bc-account-lookup-svc:0.3.5
        livenessProbe:
          exec:
            command:
            - nc -z localhost 3030 || exit -1
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        name: account-lookup-svc
        ports:
        - containerPort: 3030
        resources: {}
        volumeMounts:
        - mountPath: /app/data
          name: account-lookup-svc-data
      restartPolicy: Always
      volumes:
      - name: account-lookup-svc-data
        persistentVolumeClaim:
          claimName: account-lookup-svc-data
status: {}
