packages/installer/manifests/apps/admin-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: admin-ui
    mojaloop.layer: apps
  name: admin-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: admin-ui
  strategy: {}
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: admin-ui
        mojaloop.layer: apps
    spec:
      containers:
      - image: mojaloop/vnext-admin-ui-svc:0.1.35
        name: admin-ui
        ports:
        - containerPort: 4200
        resources: {}
      restartPolicy: Always
status: {}
