packages/installer/manifests/apps/participants-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: participants-svc
    mojaloop.layer: apps
  name: participants-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: participants-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: participants-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: ACCOUNTS_BALANCES_COA_SVC_URL
          value: accounts-and-balances-coa-grpc-svc:3300
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: AUTH_N_TOKEN_AUDIENCE
          value: mojaloop.vnext.dev.default_audience
        - name: AUTH_N_TOKEN_ISSUER_NAME
          value: mojaloop.vnext.dev.default_issuer
        - name: AUTH_Z_SVC_BASEURL
          value: http://authorization-svc:3202
        - name: KAFKA_AUDITS_TOPIC
          value: audits
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: kafka:9092
        - name: MONGO_URL
          value: mongodb://root:mongoDbPas42@mongodb:27017/
        - name: PLATFORM_CONFIG_BASE_SVC_URL
          value: http://platform-configuration-svc:3100
        - name: TIGERBEETLE_CLUSTER_ID
          value: '0'
        - name: TIGERBEETLE_CLUSTER_REPLICA_ADDRESSES
          value: tigerbeetle:3000
        image: mojaloop/participants-bc-participants-svc:0.3.9
        livenessProbe:
          exec:
            command:
            - nc -z localhost 3010 || exit -1
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        name: participants-svc
        ports:
        - containerPort: 3010
        resources: {}
        volumeMounts:
        - mountPath: /app/data
          name: participants-svc-data
      restartPolicy: Always
      volumes:
      - name: participants-svc-data
        persistentVolumeClaim:
          claimName: participants-svc-data
status: {}
