packages/installer/manifests/apps/quoting-event-handler-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojaloop.layer: apps
    mojaloop.service: quoting-event-handler-svc
  name: quoting-event-handler-svc
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      mojaloop.service: quoting-event-handler-svc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        mojaloop.layer: apps
        mojaloop.service: quoting-event-handler-svc
    spec:
      containers:
      - env:
        - name: CONSUMER_BATCH_SIZE
          value: "150"
        - name: CONSUMER_BATCH_TIMEOUT_MS
          value: "10"
        image: mojaloop/quoting-bc-event-handler-svc:0.6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - nc -z localhost 3034
          failureThreshold: 1
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: quoting-event-handler-svc
        ports:
        - containerPort: 3034
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
