packages/installer/manifests/apps/scheduling-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: scheduling-svc
    mojaloop.layer: apps
  name: scheduling-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: scheduling-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: scheduling-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: KAFKA_AUDITS_TOPIC
          value: audits
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: kafka:9092
        - name: MONGO_URL
          value: mongodb://root:mongoDbPas42@mongodb:27017/
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: AUTH_N_TOKEN_AUDIENCE
          value: mojaloop.vnext.dev.default_audience
        - name: AUTH_N_TOKEN_ISSUER_NAME
          value: mojaloop.vnext.dev.default_issuer
        - name: AUTH_Z_SVC_BASEURL
          value: http://authorization-svc:3202
        - name: PARTICIPANTS_SVC_URL
          value: http://participants-svc:3010
        - name: PLATFORM_CONFIG_BASE_SVC_URL
          value: http://platform-configuration-svc:3100
        - name: SCHEDULING_HOST_LOCKS
          value: redis-master:6379
        image: mojaloop/scheduling-bc-scheduling-svc:0.3.1
        livenessProbe:
          exec:
            command:
            - nc -z localhost 1234 || exit -1
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 20
        name: scheduling-svc
        ports:
        - containerPort: 1234
        resources: {}
      restartPolicy: Always
status: {}
