packages/installer/manifests/apps/settlements-command-handler-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojaloop.service: settlements-command-handler-svc
    mojaloop.layer: apps
  name: settlements-command-handler-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: settlements-command-handler-svc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        mojaloop.service: settlements-command-handler-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: ACCOUNTS_BALANCES_COA_SVC_URL
          value: accounts-and-balances-coa-grpc-svc:3300
        image: mojaloop/settlements-bc-command-handler-svc:0.6.1
        name: settlements-command-handler-svc
        resources: {}
      restartPolicy: Always
