packages/installer/manifests/apps/transfers-api-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojaloop.service: transfers-api-svc
    mojaloop.layer: apps
  name: transfers-api-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: transfers-api-svc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        mojaloop.service: transfers-api-svc
        mojaloop.layer: apps
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: vnext-configs
        image: mojaloop/transfers-bc-transfers-api-svc:0.6.7
        livenessProbe:
          exec:
            command:
              - sh
              - -c
              - nc -z localhost 3500
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        name: transfers-api-svc
        ports:
        - containerPort: 3500
        resources: {}
      restartPolicy: Always
