packages/installer/manifests/apps/transfers-command-handler-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: transfers-command-handler-svc
    mojaloop.layer: apps
  name: transfers-command-handler-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: transfers-command-handler-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: transfers-command-handler-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: ACCOUNTS_BALANCES_COA_SVC_URL
          value: accounts-and-balances-coa-grpc-svc:3300
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: AUTH_N_TOKEN_AUDIENCE
          value: mojaloop.vnext.dev.default_audience
        - name: AUTH_N_TOKEN_ISSUER_NAME
          value: mojaloop.vnext.dev.default_issuer
        - name: AUTH_Z_SVC_BASEURL
          value: http://authorization-svc:3202
        - name: KAFKA_AUDITS_TOPIC
          value: audits
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: kafka:9092
        - name: MONGO_URL
          value: mongodb://root:mongoDbPas42@mongodb:27017/
        - name: PARTICIPANTS_SVC_URL
          value: http://participants-svc:3010
        - name: PLATFORM_CONFIG_BASE_SVC_URL
          value: http://platform-configuration-svc:3100
        - name: SETTLEMENTS_SVC_URL
          value: http://settlements-api-svc:3600
        -name: SCHEDULING_SVC_URL
          value: http://scheduling-svc:1234
        image: mojaloop/transfers-bc-command-handler-svc:0.3.1
        name: transfers-command-handler-svc
        resources: {}
        volumeMounts:
        - mountPath: /app/data
          name: transfers-command-handler-svc-data
      restartPolicy: Always
      volumes:
      - name: transfers-command-handler-svc-data
        persistentVolumeClaim:
          claimName: transfers-command-handler-svc-data
status: {}
