packages/installer/manifests/apps/transfers-event-handler-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: transfers-event-handler-svc
    mojaloop.layer: apps
  name: transfers-event-handler-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: transfers-event-handler-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: transfers-event-handler-svc
        mojaloop.layer: apps
    spec:
      containers:
      - env:
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: AUTH_N_TOKEN_AUDIENCE
          value: mojaloop.vnext.dev.default_audience
        - name: AUTH_N_TOKEN_ISSUER_NAME
          value: mojaloop.vnext.dev.default_issuer
        - name: AUTH_Z_SVC_BASEURL
          value: http://authorization-svc:3202
        - name: KAFKA_AUDITS_TOPIC
          value: audits
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: 192.168.1.94:29092
        - name: PARTICIPANTS_SVC_URL
          value: http://participants-svc:3010
        - name: PLATFORM_CONFIG_BASE_SVC_URL
          value: http://platform-configuration-svc:3100
        image: mojaloop/transfers-bc-event-handler-svc:0.5.1
        name: transfers-event-handler-svc
        resources: {}
      restartPolicy: Always
status: {}
