packages/installer/manifests/apps/account-lookup-http-oracle-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mojaloop.service: account-lookup-http-oracle-svc
    mojaloop.layer: apps
  name: account-lookup-http-oracle-svc
spec:
  ports:
    - name: "3031"
      port: 3031
      targetPort: 3031
  selector:
    mojaloop.service: account-lookup-http-oracle-svc
