packages/installer/manifests/apps/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mojaloop.layer: apps
    mojaloop.service: admin-ui
  name: admin-ui
  namespace: default
spec:
  ports:
    - name: "4200"
      port: 4200
      protocol: TCP
      targetPort: 4200
  selector:
    mojaloop.service: admin-ui
