packages/installer/manifests/apps/participants-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mojaloop.service: participants-svc
    mojaloop.layer: apps
  name: participants-svc
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3010
  selector:
    mojaloop.service: participants-svc
