packages/installer/manifests/apps/quoting-api-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mojaloop.service: quoting-api-svc
    mojaloop.layer: apps
  name: quoting-api-svc
spec:
  ports:
    - name: "3033"
      port: 3033
      targetPort: 3033
  selector:
    mojaloop.service: quoting-api-svc
