packages/installer/manifests/apps/scheduling-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: scheduling-svc
    mojaloop.layer: apps
  name: scheduling-svc
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 1234
  selector:
    mojaloop.service: scheduling-svc
status:
  loadBalancer: {}
