packages/installer/manifests/apps/transfers-api-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  creationTimestamp: null
  labels:
    mojaloop.service: transfers-api-svc
    mojaloop.layer: apps
  name: transfers-api-svc
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    mojaloop.service: transfers-api-svc
status:
  loadBalancer: {}
