packages/installer/manifests/apps/admin-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ui-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #external-dns.alpha.kubernetes.io/hostname: vnextadmin.vnext.mojaloop.live
    #cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx-ext
  # tls:
  #   - hosts:
  #       - vnextadmin.vnext.mojaloop.live
  #     secretName: quickstart-example-tls
  rules:
  - host: vnextadmin.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: admin-ui
            port:
              number: 4200
