packages/installer/manifests/apps/fspiop-api-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fspiop-api-svc
spec:
  ingressClassName: nginx-ext
  rules:
  - host: fspiop.vnext
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: fspiop-api-svc
            port:
              number: 4000
