packages/installer/manifests/apps/mongo-robo-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongohost.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
